getFirst()をget(0)に。snake_caseの名前をcamelcaseに